--- a/mysite/account/templates/registration/login.html
+++ b/mysite/account/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Log-in{% endblock %}
 {% block content %}
-    <h1>Log-in</h1>
+    <h1>Вход в систему</h1>
     {% if form.errors %}
         <p>
             Имя пользователя или пароль неккоректны
@@ -17,7 +17,7 @@
             {{ form.as_p }}
             {% csrf_token %}
             <input type="hidden" name="next" value="{{ next }}"/>
-            <p><input type="submit" value="Log-in"></p>
+            <p><input type="submit" value="Войти"></p>
             <p><a href="{% url 'password_reset' %}">Забыли пароль?</a></p>
         </form>
     </div>
