--- a/mysite/account/templates/registration/password_reset_email.html
+++ b/mysite/account/templates/registration/password_reset_email.html
@@ -1,3 +1,3 @@
 Было запрошено изменение пароля для email {{ email }}. Используйте ссылку ниже, чтобы завершить изменение:
 {{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
-Выш username: {{ user.get_username }}
+Ваш username: {{ user.get_username }}
