--- a/mysite/webservice/templates/webservice/main_page.html
+++ b/mysite/webservice/templates/webservice/main_page.html
@@ -9,7 +9,7 @@
                     <p>
                         Модель, описывающая процессы затвердевания с&nbsp;двухфазной зоной концентрационного переохлаждения
                     </p>
-            <p><a href="{% url 'webservice:model' %}">Перейти к вычислениям</a></p>
+            <p><a href="{% url 'webservice:model' model_id='model_processes' %}">Перейти к вычислениям</a></p>
 
         </div>
     </li>
