add new model fixes

--- a/mysite/webservice/templates/webservice/main_page.html
+++ b/mysite/webservice/templates/webservice/main_page.html
@@ -13,6 +13,15 @@
 
         </div>
     </li>
+    <li>
+        <div class="modelDescription">
+                    <p>
+                        Модель, решающая проблему Стефана
+                    </p>
+            <p><a href="{% url 'webservice:model' model_id='stefan_problem' %}">Перейти к вычислениям</a></p>
+
+        </div>
+    </li>
 </ul>
 
 {% endblock %}
